@@ -2342,6 +2342,7 @@ int initProvider(ProviderInfo *info, unsigned int sessionId, char** errorStr)
 
    pthread_mutex_lock(&info->initMtx);
    if (info->initialized==0) {  
+     info -> initialized = 1;
    
      ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
      ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)"$$",CMPI_chars);
@@ -2412,6 +2413,7 @@ int initProvider(ProviderInfo *info, unsigned int sessionId, char** errorStr)
      
      if (rc) {
        rc = -2;
+       info -> initialized = 0;
        if (errstr != NULL) {
           *errorStr = sfcb_snprintf("Error initializing provider %s from %s for class %s.  %s", 
                            info->providerName, info->location, 
@@ -2422,11 +2424,10 @@ int initProvider(ProviderInfo *info, unsigned int sessionId, char** errorStr)
                            info->providerName, info->location, info->className);
        }
      } else {
-       info -> initialized = 1;
        *errorStr = NULL;
      }
-     pthread_mutex_unlock(&info->initMtx);
    }
+   pthread_mutex_unlock(&info->initMtx);
    if (errstr != NULL) free(errstr); 
 
    _SFCB_RETURN(rc);
@@ -2667,7 +2668,7 @@ static void *processProviderInvocationRequestsThread(void *prms)
          doLoadProvider(pInfo,dlName, 512);
       }  
       
-      if (pInfo && pInfo->initialized == 0) {
+      if (pInfo) {
 	initRc=initProvider(pInfo,req->sessionId, &errstr);
 	_SFCB_TRACE(1, ("--- Provider initialization rc %d",initRc));
       }
