@@ -16,6 +16,7 @@ Bugs fixed:
 - 2655854 Common Provider invokes Init and CleanUp more than once
 - 2875050 default MOFs should allow for multiple files
 - 2945277 SFCB crashes on subscription without filter or handler prop
+- 2946106 possible race condition initializing providers
 
 Changes in 1.3.6
 ================
